examples/test/testpolicy18944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18944
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key23: value35
      key12: value18
      key34: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value11
          key43: value33
          key2: value44
      podSelector:
        matchLabels:
          key29: value14
          key33: value20
          key9: value20
